ss/iptables-2222
# Generated by iptables-save v1.4.21 on Tue Aug  7 17:41:54 2018
*mangle
:PREROUTING ACCEPT [417:31833]
:INPUT ACCEPT [417:31833]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [325:62616]
:POSTROUTING ACCEPT [320:62276]
COMMIT
# Completed on Tue Aug  7 17:41:54 2018
# Generated by iptables-save v1.4.21 on Tue Aug  7 17:41:54 2018
*raw
:PREROUTING ACCEPT [417:31833]
:OUTPUT ACCEPT [325:62616]
COMMIT
# Completed on Tue Aug  7 17:41:54 2018
# Generated by iptables-save v1.4.21 on Tue Aug  7 17:41:54 2018
*nat
:PREROUTING ACCEPT [12:620]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Aug  7 17:41:54 2018
# Generated by iptables-save v1.4.21 on Tue Aug  7 17:41:54 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m multiport --dports 22,8080 -m connlimit --connlimit-above 5 --connlimit-mask 32 -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m multiport --dports 443,22,8080 -m state --state NEW -j ACCEPT
-A INPUT -p udp -m multiport --dports 443,22,8080 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2222 -m state --state NEW -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state NEW -j ACCEPT
-A OUTPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Tue Aug  7 17:41:54 2018
